--- a/alphabetsindexfastscrollrecycler/build.gradle
+++ b/alphabetsindexfastscrollrecycler/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.library'
-final SDK_VERSION = '25.3.1'
+final SDK_VERSION = '27.1.1'
 apply plugin: 'com.github.dcendents.android-maven' // ADD THIS
 
 group='com.github.jitpack'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -32,9 +32,9 @@ allprojects {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:${SDK_VERSION}"
-    compile "com.android.support:design:${SDK_VERSION}"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:appcompat-v7:${SDK_VERSION}"
+    implementation "com.android.support:design:${SDK_VERSION}"
 }
 
 // build a jar with source files
