--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.application'
-final SDK_VERSION = '25.3.1'
+final SDK_VERSION = '27.1.1'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "in.myinnos.indexfastscrollrecycler"
         minSdkVersion 15
@@ -20,9 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "com.android.support:appcompat-v7:${SDK_VERSION}"
-    compile "com.android.support:design:${SDK_VERSION}"
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile project(':alphabetsindexfastscrollrecyclerLibrary')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:${SDK_VERSION}"
+    implementation "com.android.support:design:${SDK_VERSION}"
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation project(':alphabetsindexfastscrollrecyclerLibrary')
 }
