Do not import app whil on JITPACK

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
-include ':alphabetsindexfastscrollrecyclerLibrary',':app'
+include ':alphabetsindexfastscrollrecyclerLibrary'
 project(':alphabetsindexfastscrollrecyclerLibrary').projectDir = new File('alphabetsindexfastscrollrecycler')
+if (!System.env.JITPACK)
+    include ':app'
